--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,12 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <!-- Load jquery -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+     <!-- Load KaTeX -->
+     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css">
+     <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.js"></script>
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -49,4 +55,20 @@
 
     {% include analytics.html %}
   </body>
+  <footer>
+       <!-- Parse the Latex divs with Katex-->
+       <script type="text/javascript">
+           $("script[type='math/tex']").replaceWith(
+               function(){
+                   var tex = $(this).text();
+                   return katex.renderToString(tex, {displayMode: false});
+           });
+
+           $("script[type='math/tex; mode=display']").replaceWith(
+               function(){
+                   var tex = $(this).text();
+                   return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
+           });
+       </script>
+   </footer>
 </html>
